# tsp-output/@typespec/openapi3/openapi.v1.json
@@ -26,6 +26,19 @@
               "default": 1
             },
             "explode": false
+          },
+          {
+            "name": "perPage",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "minimum": 1,
+              "maximum": 100,
+              "default": 10
+            },
+            "explode": false
           }
         ],
         "responses": {
@@ -41,10 +54,14 @@
                       "items": {
                         "$ref": "#/components/schemas/Course"
                       }
+                    },
+                    "meta": {
+                      "$ref": "#/components/schemas/PageMeta"
                     }
                   },
                   "required": [
-                    "data"
+                    "data",
+                    "meta"
                   ]
                 }
               }
@@ -171,6 +188,19 @@
               "default": 1
             },
             "explode": false
+          },
+          {
+            "name": "perPage",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "minimum": 1,
+              "maximum": 100,
+              "default": 10
+            },
+            "explode": false
           }
         ],
         "responses": {
@@ -186,10 +216,14 @@
                       "items": {
                         "$ref": "#/components/schemas/CourseLesson"
                       }
+                    },
+                    "meta": {
+                      "$ref": "#/components/schemas/PageMeta"
                     }
                   },
                   "required": [
-                    "data"
+                    "data",
+                    "meta"
                   ]
                 }
               }
@@ -914,6 +948,19 @@
               "default": 1
             },
             "explode": false
+          },
+          {
+            "name": "perPage",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "minimum": 1,
+              "maximum": 100,
+              "default": 10
+            },
+            "explode": false
           }
         ],
         "responses": {
@@ -929,10 +976,14 @@
                       "items": {
                         "$ref": "#/components/schemas/User"
                       }
+                    },
+                    "meta": {
+                      "$ref": "#/components/schemas/PageMeta"
                     }
                   },
                   "required": [
-                    "data"
+                    "data",
+                    "meta"
                   ]
                 }
               }
@@ -1437,6 +1488,33 @@
           },
           "instance": {
             "type": "string"
+          }
+        }
+      },
+      "PageMeta": {
+        "type": "object",
+        "required": [
+          "page",
+          "perPage",
+          "total",
+          "totalPages"
+        ],
+        "properties": {
+          "page": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "perPage": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "total": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "totalPages": {
+            "type": "integer",
+            "format": "int32"
           }
         }
       },
